# RANMT

./: .gitignore  ANDROID_APP.md  BUG_REPORT.md  CLAUDE.md  README.md  TODO.md
android_client/app/: build.gradle.kts
android_client/gradle/: libs.versions.toml
client/: Cargo.toml
client/src/: lib.rs
doc/: architecture.md  datatypes.md  implementation-details.md  protocol.md
doc/android/: 00-overview.md  01-1-core-principles.md  02-2-app-navigation-structure.md  03-3-feature-breakdown.md  04-4-required-device-permissions-os-interactions.md  05-5-rust-client-integration-uniffi.md
doc/architecture/: 00-overview.md  01-1-system-components.md  02-2-client-architecture.md  03-3-server-architecture.md  04-4-quic-integration-pattern.md  05-5-file-layout-planned.md
doc/implementation/: 00-overview.md  01-1-quiche-config-exact-parameters.md  02-2-quic-tls-setup.md  03-3-dependencies-cargo-toml.md  04-4-cli-interface.md  05-5-stream-0-bidirectional-read-write-contract.md  06-6-udp-socket-i-o-pattern.md  07-7-mock-telemetry-generator-exact-formulas.md  08-8-client-event-loop-complete-structure.md  09-9-server-event-loop-complete-structure.md  10-10-constants-summary.md  11-11-utility-functions.md  12-12-server-side-session-lifecycle-summary.md
doc/protocol/: datatypes-00-overview.md  datatypes-01-1-wire-protocol-constants.md  datatypes-02-2-handshake-types.md  datatypes-03-3-server-stats.md  datatypes-04-4-client-telemetry.md  datatypes-06-6-pacing-state.md  (+18 more)
server/: Cargo.toml
shared/: Cargo.toml
src/rust/server/: Cargo.toml
src/rust/server/src/: main.rs
(+62 files in other folders)
