[package]
name = "ranmt-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ranmt-server"
path = "src/main.rs"

[dependencies]
ranmt-shared = { path = "../shared" }
quiche = "0.28"
rcgen = "0.14"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde"] }
getrandom = "0.4"
